Add form addUnit. Add form cancellation_inspection. Add form comanyMaster. Add form company1. Add form confirmwaiveoff. Add form create_tower_fitout. Add form fastTrackPaySlipPage. Add form imgtest. Add form insp_report_client. Add form insp_report_subform. Add form insp_reschedule_client. Add form insp_review_subform. Add form insp_view_proof. Add form insp_viewgrid. Add form insp_waive_view. Add form inspection_report. Add form inspectionSchedule_subform. Add form inspSchedl. Add form location1. Add form locationForm. Add form ofc_amendment. Add form ofc_category1. Add form ofc_fitoutcertificate. Add form ofc_Floor_form. Add form ofc_tempCertificate. Add form ofc_tower_form. Add form payment_noncompliance. Add form paymentDrawingStamp. Add form paymentRedirectPage. Add form paymentRefundViewPage. Add form payredirect_noncompliance. Add form redirect_OFC_amendment. Add form serReqDocMissing. Add form serReqDocMissingSubform. Add form serReqForm. Add form serReqForm_approval. Add form serReqForm_approval_action. Add form serRequestinformation. Add form serviceRequestPaymentForm. Add form serviceRequestView. Add form sr_for_approval. Add form sr_uploaddocument. Add form sr_uploaddocument_grid. Add form srviewDrawingReview. Add form uploaddocform. Add form uploadDocument. Add form uploadDocumentByCustomer. Add form viewreport. Add form waveoff_insp_fee. Add list insp_othernoncompliance. Add list insp_reschedule_client_list. Add list inspection_non_compliance. Add list inspection_summary_client. Add list inspectionrequestsummary. Add list inspectionReviewDrawing. Add list list_comanyMaster. Add list list_inspSchedl. Add list list_missingdoc_auditTrail. Add list list_ofc_Floor_form. Add list list_ofc_imageaudit_partialcomplaince. Add list list_ofc_inspection_form. Add list list_ofc_inspection_jobs. Add list list_ofc_inspection_report_form. Add list list_ofc_tower_form. Add list list_serReqForm. Add list list_serReqForm1. Add list listuploadeddrawing. Add list ofc_app_in

--- a/lists/serviceRequestListApproval.json
+++ b/lists/serviceRequestListApproval.json
@@ -6,7 +6,26 @@
             "aggregateField": [],
             "customSelectionValue": "",
             "extraCondition": "",
-            "filters": [],
+            "filters": [
+                {
+                    "field": "approval_status",
+                    "join": "OR",
+                    "operator": "=",
+                    "value": "Approved"
+                },
+                {
+                    "field": "approval_status",
+                    "join": "OR",
+                    "operator": "=",
+                    "value": "In-Progress"
+                },
+                {
+                    "field": "status",
+                    "join": "OR",
+                    "operator": "=",
+                    "value": "On Approval"
+                }
+            ],
             "formDefId": "serReqForm",
             "functionColumns": [],
             "groupBy": "",
@@ -47,10 +66,10 @@
             },
             "headerAlignment": "",
             "hidden": "false",
-            "id": "column_8",
-            "label": "Tower Seq No",
-            "name": "ofc_tower_tab.tower_seq_no",
-            "sortable": "false",
+            "id": "column_0",
+            "label": "DMCC SR Number",
+            "name": "serReqDmccSrNo",
+            "sortable": "true",
             "style": "",
             "width": ""
         },
@@ -91,10 +110,10 @@
             },
             "headerAlignment": "",
             "hidden": "false",
-            "id": "column_0",
-            "label": "DMCC SR Number",
-            "name": "serReqDmccSrNo",
-            "sortable": "true",
+            "id": "column_8",
+            "label": "Tower Seq No",
+            "name": "ofc_tower_tab.tower_seq_no",
+            "sortable": "false",
             "style": "",
             "width": ""
         },
@@ -222,15 +241,6 @@
             "type": {
                 "className": "org.joget.apps.datalist.lib.TextFieldDataListFilterType",
                 "properties": {"defaultValue": ""}
-            }
-        },
-        {
-            "id": "filter_2",
-            "label": "Service Categoy",
-            "name": "serReqServCat",
-            "type": {
-                "className": "org.joget.apps.datalist.lib.TextFieldDataListFilterType",
-                "properties": {}
             }
         }
     ],
