--- a/forms/serReqForm_approval.json
+++ b/forms/serReqForm_approval.json
@@ -8,16 +8,16 @@
                 "elements": [{
                     "className": "org.joget.apps.form.lib.SubForm",
                     "properties": {
-                        "elementUniqueKey": "4926",
-                        "formDefId": "serReqForm",
+                        "formDefId": "sr_for_approval",
                         "id": "subform",
                         "label": "",
                         "loadBinder": {
                             "className": "org.joget.apps.form.lib.WorkflowFormBinder",
                             "properties": {}
                         },
-                        "noframe": "true",
+                        "noframe": "",
                         "parentSubFormId": "",
+                        "permissionHidden": "",
                         "readonly": "true",
                         "readonlyLabel": "true",
                         "storeBinder": {
@@ -27,14 +27,11 @@
                         "subFormParentId": ""
                     }
                 }],
-                "properties": {
-                    "elementUniqueKey": "4924",
-                    "width": "100%"
-                }
+                "properties": {"width": "100%"}
             }],
             "properties": {
                 "comment": "",
-                "id": "section1",
+                "id": "section6",
                 "join": "",
                 "label": "",
                 "loadBinder": {
@@ -51,17 +48,133 @@
                 "regex": "",
                 "reverse": "",
                 "storeBinder": {
-                    "className": "org.joget.apps.form.lib.BeanShellFormBinder",
-                    "properties": {
-                        "autoHandleFiles": "",
-                        "autoHandleWorkflowVariable": "true",
-                        "cacheInterval": "",
-                        "script": "import java.io.IOException;\r\nimport java.sql.Connection;\r\nimport java.sql.DriverManager;\r\nimport java.sql.PreparedStatement;\r\nimport java.text.SimpleDateFormat;\r\nimport java.util.Date;\r\n\t\r\n\t// This code will execute when user service request for prime use with 0.00\r\n\t// amount so status will update as \"Payment Completed\"\r\n\tpublic  updateOrderStatusForPrime() {\r\n\t\tString redirectUrl = \"http://localhost:8080/jw/web/userview/ofc_app/v/_/serReqForm_crud\";\r\n\t\tString id = \"#form.ofc_serReqs_tab.id#\";\r\n\t\tString serReqfees = \"#form.ofc_ofc_category_tab.serReq_fees[{form.ofc_serReqs_tab.ofc_category_name}]#\";\r\n\r\n\t\tif (serReqfees.equalsIgnoreCase(\"0.00\")) {\r\n\t\t\ttry {\r\n\r\n\t\t\t\tSimpleDateFormat formatter = new SimpleDateFormat(\"yyyy-MM-dd HH:mm:ss\");\r\n\t\t\t\tDate date = new Date();\r\n\t\t\t\t//System.out.println(\"Date=======================\");\r\n\t\t\t\tString paymentDate = formatter.format(date).toString();\r\n\t\t\t//\tSystem.out.println(paymentDate);\r\n\r\n\t\t\t\tClass.forName(\"com.mysql.jdbc.Driver\").newInstance();\r\n\t\t\t\tConnection con = DriverManager.getConnection(\"jdbc:mysql://localhost:3307/jwdb?characterEncoding=UTF-8\",\r\n\t\t\t\t\t\t\"root\", \"\");\r\n\t\t\t\tif (!con.isClosed()) {\r\n\r\n\t\t\t\t\tString paymentComplete = \"Payment Completed\";\r\n\r\n\t\t\t\t\t// create sql query\r\n\t\t\t\t\tString query = \"update app_fd_ofc_serreqs_tab set c_status = ?,c_paymentDate =? where id = ?\";\r\n\r\n\t\t\t\t\t// create the java mysql update PreparedStatement c_bearer_access_token\r\n\t\t\t\t\tPreparedStatement preparedStmt = con.prepareStatement(query);\r\n\t\t\t\t\tpreparedStmt.setString(1, paymentComplete);\r\n\t\t\t\t\tpreparedStmt.setString(2, paymentDate);\r\n\t\t\t\t\tpreparedStmt.setString(3, id);\r\n\r\n\t\t\t\t\t// execute the java PreparedStatement\r\n\t\t\t\t\tpreparedStmt.executeUpdate();\r\n\r\n\t\t\t\t\tcon.close();\r\n\t\t\t\t} else {\r\n\t\t\t\t\tSystem.out.println(\"Connection Problem\");\r\n\t\t\t\t}\r\n\t\t\t} catch (Exception ex) {\r\n\t\t\t\tex.printStackTrace();\r\n\t\t\t} finally {\r\n\t\t\t\ttry {\r\n\t\t\t\t\t// Redirect page to service request summary\r\n\t\t\t\t\tjava.awt.Desktop.getDesktop().browse(java.net.URI.create(redirectUrl));\r\n\t\t\t\t} catch (IOException e) {\r\n\t\t\t\t\t// TODO Auto-generated catch block\r\n\t\t\t\t\te.printStackTrace();\r\n\t\t\t\t}\r\n\t\t\t}\r\n\t\t}\r\n\t}\r\n\t\r\n\t//method calling\r\n\tupdateOrderStatusForPrime();",
-                        "useAjax": ""
-                    }
+                    "className": "",
+                    "properties": {}
                 },
                 "visibilityControl": "",
                 "visibilityValue": ""
+            }
+        },
+        {
+            "className": "org.joget.apps.form.model.Section",
+            "elements": [{
+                "className": "org.joget.apps.form.model.Column",
+                "elements": [{
+                    "className": "org.joget.plugin.enterprise.AjaxSubForm",
+                    "properties": {
+                        "ajax": "true",
+                        "collapsible": "",
+                        "collapsibleExpanded": "true",
+                        "collapsibleLabelCollapsed": "View Details",
+                        "collapsibleLabelExpanded": "Hide Details",
+                        "formDefId": "serReqDocMissing",
+                        "hideEmpty": "",
+                        "id": "missingdocuments",
+                        "label": "",
+                        "noLoad": "",
+                        "noframe": "true",
+                        "parentSubFormId": "",
+                        "readonly": "",
+                        "readonlyLabel": "",
+                        "storeBinder": {
+                            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+                            "properties": {}
+                        },
+                        "subFormParentId": ""
+                    }
+                }],
+                "properties": {"width": "100%"}
+            }],
+            "properties": {
+                "comment": "",
+                "id": "section5",
+                "join": "",
+                "label": "",
+                "loadBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permission": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permissionHidden": "",
+                "permissionReadonly": "",
+                "readonly": "",
+                "readonlyLabel": "",
+                "regex": "",
+                "reverse": "",
+                "storeBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "visibilityControl": "",
+                "visibilityValue": ""
+            }
+        },
+        {
+            "className": "org.joget.apps.form.model.Section",
+            "elements": [{
+                "className": "org.joget.apps.form.model.Column",
+                "elements": [{
+                    "className": "org.joget.apps.form.lib.FileUpload",
+                    "properties": {
+                        "attachment": "",
+                        "fileType": "",
+                        "fileTypeMsg": "Invalid file type",
+                        "id": "docuploaded",
+                        "label": "Upload Drawing / Document",
+                        "maxSize": "",
+                        "maxSizeMsg": "File size limit exceeded",
+                        "multiple": "true",
+                        "padding": "",
+                        "permissionPlugin": {
+                            "className": "org.joget.apps.userview.lib.GroupPermission",
+                            "properties": {
+                                "allowedGroupIds": "G-009",
+                                "orgId": ""
+                            }
+                        },
+                        "permissionType": "custom",
+                        "readonly": "",
+                        "removeFile": "",
+                        "resizeHeight": "",
+                        "resizeMethod": "",
+                        "resizeQuality": "0.8",
+                        "resizeWidth": "",
+                        "size": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        }
+                    }
+                }],
+                "properties": {"width": "100%"}
+            }],
+            "properties": {
+                "comment": "",
+                "id": "section6",
+                "join": "",
+                "label": "Section",
+                "loadBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permission": {
+                    "className": "",
+                    "properties": {}
+                },
+                "permissionReadonly": "",
+                "readonly": "",
+                "readonlyLabel": "",
+                "regex": "",
+                "reverse": "",
+                "storeBinder": {
+                    "className": "",
+                    "properties": {}
+                },
+                "visibilityControl": "approval_status",
+                "visibilityValue": "In-Progress"
             }
         },
         {
@@ -138,9 +251,13 @@
                 "elements": [{
                     "className": "org.joget.plugin.enterprise.FormGrid",
                     "properties": {
+                        "abortRelatedRunningProcesses": "",
+                        "deleteFiles": "",
+                        "deleteGridData": "",
+                        "deleteMessage": "",
+                        "deleteSubformData": "",
                         "disabledAdd": "true",
                         "disabledDelete": "true",
-                        "elementUniqueKey": "4944",
                         "enableSorting": "",
                         "errorMessage": "Invalid number of rows.",
                         "formDefId": "serReqForm_approval_action",
@@ -171,23 +288,17 @@
                             },
                             {
                                 "format": "",
-                                "formatType": "html",
-                                "label": "Remarks",
-                                "value": "remarks",
-                                "width": ""
-                            },
-                            {
-                                "format": "",
                                 "formatType": "text",
                                 "label": "Date",
                                 "value": "approval_date",
                                 "width": ""
                             }
                         ],
+                        "pageSize": "",
+                        "permissionHidden": "",
                         "readonly": "true",
                         "readonlyLabel": "",
                         "showRowNumber": "",
-                        "sortField": "sort",
                         "storeBinder": {
                             "className": "org.joget.plugin.enterprise.MultirowFormBinder",
                             "properties": {
@@ -197,8 +308,13 @@
                         },
                         "submit-label-normal": "Submit",
                         "submit-label-readonly": "Close",
+                        "uniqueKey": "",
                         "validateMaxRow": "",
                         "validateMinRow": "",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
                         "width": "900"
                     }
                 }],
@@ -243,8 +359,18 @@
             "properties": {}
         },
         "postProcessor": {
-            "className": "",
-            "properties": {}
+            "className": "org.joget.apps.app.lib.MultiTools",
+            "properties": {
+                "comment": "",
+                "runInMultiThread": "",
+                "tools": [{
+                    "className": "org.joget.tutorial.WorkflowVariableUpdateTool",
+                    "properties": {"workflowVarMapping": [{
+                        "changeValueTo": "#form.ofc_ofc_category_tab.ofc_category_name[{form.ofc_serReqs_tab.ofc_category_name}]#",
+                        "variable": "serviceCategoryType"
+                    }]}
+                }]
+            }
         },
         "postProcessorRunOn": "create",
         "storeBinder": {
