--- a/forms/serReqForm_approval_action.json
+++ b/forms/serReqForm_approval_action.json
@@ -18,10 +18,13 @@
                 {
                     "className": "org.joget.apps.form.lib.HiddenField",
                     "properties": {
-                        "elementUniqueKey": "4915",
                         "id": "approver",
                         "useDefaultWhenEmpty": "",
-                        "value": "#currentUser.username#",
+                        "validator": {
+                            "className": "",
+                            "properties": {}
+                        },
+                        "value": "#currentUser.fullName#",
                         "workflowVariable": ""
                     }
                 },
@@ -50,8 +53,8 @@
                             },
                             {
                                 "grouping": "",
-                                "label": "Rejected",
-                                "value": "Rejected"
+                                "label": "In-Progress",
+                                "value": "In-Progress"
                             }
                         ],
                         "optionsBinder": {
@@ -101,11 +104,37 @@
         }
     }],
     "properties": {
-        "elementUniqueKey": "4895",
+        "description": "",
         "id": "serReqForm_approval_action",
-        "loadBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
+        "loadBinder": {
+            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+            "properties": {}
+        },
         "name": "Service Request Form Approval Action",
-        "storeBinder": {"className": "org.joget.apps.form.lib.WorkflowFormBinder"},
+        "noPermissionMessage": "",
+        "permission": {
+            "className": "",
+            "properties": {}
+        },
+        "postProcessor": {
+            "className": "org.joget.apps.app.lib.MultiTools",
+            "properties": {
+                "comment": "",
+                "runInMultiThread": "",
+                "tools": [{
+                    "className": "org.joget.tutorial.WorkflowVariableUpdateTool",
+                    "properties": {"workflowVarMapping": [{
+                        "changeValueTo": "#form.ofc_ofc_category_tab.ofc_category_name[{form.ofc_serReqs_tab.ofc_category_name}]#",
+                        "variable": "serviceCategoryType"
+                    }]}
+                }]
+            }
+        },
+        "postProcessorRunOn": "create",
+        "storeBinder": {
+            "className": "org.joget.apps.form.lib.WorkflowFormBinder",
+            "properties": {}
+        },
         "tableName": "ofc_serReqs_tab_a"
     }
 }
