--- a/lists/ofc_app_inspector_job_history.json
+++ b/lists/ofc_app_inspector_job_history.json
@@ -6,7 +6,7 @@
             "jdbcDatasource": "default",
             "optimisePaging": "",
             "primaryKey": "id",
-            "sql": "select b.c_jobid,b.c_reportdate,b.c_inspectionreportStatus,a.c_companyLocation,b.id,b.c_serReqServCat,b.c_inspSchedlDate,b.c_serReqDmccSrNo,b.c_status,d.c_ofc_category_name,a.c_companyName,b.c_paymentDate,c.c_tower_seq_no,c.c_tower_name from jwdb.app_fd_ofc_company_tab a \njoin jwdb.app_fd_ofc_serReqs_tab b on a.id = b.c_companyName join jwdb.app_fd_ofc_tower_tab c on a.c_tower_name = c.id join \njwdb.app_fd_ofc_ofc_category_tab d on b.c_ofc_category_name = d.id where b.c_status like 'Inspection%' \norder by b.c_inspSchedlDate is null,b.c_inspSchedlDate desc"
+            "sql": "select b.c_jobid,b.c_reportdate,b.c_inspectionreportStatus,a.c_companyLocation,b.id,b.c_serReqServCat,b.c_inspSchedlDate,b.c_serReqDmccSrNo,b.c_status,d.c_ofc_category_name,a.c_companyName,b.c_paymentDate,c.c_tower_seq_no,c.c_tower_name from jwdb.app_fd_ofc_company_tab a \njoin jwdb.app_fd_ofc_serReqs_tab b on a.id = b.c_companyName join jwdb.app_fd_ofc_tower_tab c on a.c_tower_name = c.id join \njwdb.app_fd_ofc_ofc_category_tab d on b.c_ofc_category_name = d.id where b.c_status = 'Inspection Completed' or b.c_inspectionreportStatus = 'Full Compliance'\norder by b.c_inspSchedlDate is null,b.c_inspSchedlDate desc"
         }
     },
     "buttonPosition": "bottomLeft",
@@ -211,13 +211,27 @@
     ],
     "considerFilterWhenGetTotal": "",
     "description": "",
+    "disableResponsive": "",
     "filters": [],
+    "hidePageSize": "",
     "id": "ofc_app_inspector_job_history",
-    "name": "Inspection History",
+    "name": "List - Inspection History",
     "order": "",
     "orderBy": "",
     "pageSize": "0",
     "pageSizeSelectorOptions": "10,20,30,40,50,100",
+    "responsiveView": [
+        {
+            "breakpoint": "",
+            "columns": "",
+            "view": "Mobile"
+        },
+        {
+            "breakpoint": "",
+            "columns": "",
+            "view": "Tablet"
+        }
+    ],
     "rowActions": [{
         "className": "org.joget.apps.datalist.lib.HyperlinkDataListAction",
         "icon": "<i class=\"fas fa-link\"><\/i>",
@@ -227,20 +241,22 @@
         "properties": {
             "confirmation": "",
             "datalist_type": "row_action",
-            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/insp_report_view",
-            "hrefColumn": "c_serReqDmccSrNo;c_jobid;c_companyName;c_inspSchedlDate;c_inspectionreportStatus;c_reportdate",
-            "hrefParam": "serReqDmccSrNo;id;company;scheduledate;reportstatus;reportdate",
-            "label": "Report",
+            "href": "http://localhost:8080/jw/web/userview/ofc_app/v/_/viewReport",
+            "hrefColumn": "c_serReqDmccSrNo;c_companyName;c_inspSchedlDate;c_inspectionreportStatus;c_reportdate;id",
+            "hrefParam": "serReqDmccSrNo;company;scheduledate;reportstatus;reportdate;id",
+            "label": "View Report",
             "rules": [{
                 "field": "c_status",
                 "join": "AND",
                 "operator": "=",
                 "value": "Inspection Completed"
             }],
-            "target": "_self"
+            "target": "popup"
         },
         "type": "text"
     }],
+    "searchPopup": "",
+    "showDataWhenFilterSet": "",
     "showPageSizeSelector": "true",
-    "useSession": "false"
+    "useSession": ""
 }
