Add form cancellation_inspection. Add form comanyMaster. Add form company1. Add form confirmwaiveoff. Add form coplianceTaxInvoiceForm. Add form fastTrackPaySlipPage. Add form imgtest. Add form insp_report_client. Add form insp_report_subform. Add form insp_reschedule_client. Add form insp_review_subform. Add form insp_view_proof. Add form insp_viewgrid. Add form insp_waive_view. Add form inspection_report. Add form inspectionFinalReport. Add form inspectionSchedule_subform. Add form inspSchedl. Add form location1. Add form ofc_activity_form. Add form ofc_amendment. Add form ofc_category1. Add form ofc_checklist_form. Add form ofc_fitoutcertificate. Add form ofc_Floor_form. Add form ofc_ofc_category_form. Add form ofc_tempCertificate. Add form ofc_tower_form. Add form ofc_unitArea_form. Add form otherNonComplianceAmendmentTaxInvoice. Add form payment_noncompliance. Add form paymentDrawingStamp. Add form paymentNotSettledForm. Add form paymentRedirectPage. Add form paymentRefundViewPage. Add form payredirect_noncompliance. Add form redirect_OFC_amendment. Add form serReqDocMissing. Add form serReqDocMissingSubform. Add form serReqForm. Add form serReqForm_approval. Add form serReqForm_approval_action. Add form serRequestinformation. Add form serrequser. Add form serviceRequestPaymentForm. Add form serviceRequestView. Add form sr_for_approval. Add form sr_uploaddocument. Add form srviewDrawingReview. Add form unit1. Add form uploaddocform. Add form uploadDocument. Add form uploadDocumentByCustomer. Add form viewreport. Add form waveoff_insp_fee. Add list fitout_type. Add list insp_othernoncompliance. Add list insp_reschedule_client_list. Add list inspection_non_compliance. Add list inspection_summary_client. Add list inspection_summary_client_inbox. Add list inspection_summary_client_V1. Add list inspectionrequestsummary. Add list inspectionReviewDrawing. Add list inspectionReviewDrawingInbox. Add list list_comanyMaster. Add list list_inspection_report. Add list list_

--- a/forms/serReqForm_approval_action.json
+++ b/forms/serReqForm_approval_action.json
@@ -50,8 +50,8 @@
                             },
                             {
                                 "grouping": "",
-                                "label": "Rejected",
-                                "value": "Rejected"
+                                "label": "In-Progress",
+                                "value": "In-Progress"
                             }
                         ],
                         "optionsBinder": {
